--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,5 @@ spec/dummy/.sass-cache
 
 # http://yehudakatz.com/2010/12/16/clarifying-the-roles-of-the-gemspec-and-gemfile/
 Gemfile.lock
+
+passwords.yml
