--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: ruby
 rvm:
   - 2.4.1
+install:
+  - gem install system_cat
+  - bundle install --jobs=3 --retry=3
 script:
   - bundle exec rspec spec
 before_script:
